--- a/style.css
+++ b/style.css
@@ -3,182 +3,224 @@
     padding: 0;
     box-sizing: border-box;
 }
-#search_icon{
-    width: 20px;
-    height: 20px;
-    mix-blend-mode: multiply;
-
-}
-form{
-    padding-top: 20px;
-}
-[src="./toggle_nav_icon.PNG"]{
-    width: 80px;
-    height: 60px;
-    float: right;
-}
-.search{
-    display: flex;
-}
-header{
-    width: 100%;
-    background-color: blue;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    position: fixed;
-
-}
-ul{
+ ul{
+    width: 50%;
     list-style-type: none;
     display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    padding: 20px;
-    color: white;
-}
-#search_icon{
-    position: relative;
-    top: 20px;
-}
-.logo{
-    font-size: 36px;
-    color: white;
-    padding: 9px;
-}
-
-#image{
-    width: 500px;
-    padding:100px ;
-   
-}
-#textarea{
-    width: 500px;
-    height: 400px;
-    margin: 100px 10px;
-    
-    
-}
-.firstpara{
-    display: flex;
-    justify-content: center;
-}
-.secpara div{
-    width: 15%;
-    height: 50px;
-    border: 1px solid black;
-    padding: 5px; 
-}
-.secpara{
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-}
-#box1{
-    background-color: #393c5f;
-    color: white;
-    border-radius: 5px;
-}
-#box2{
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-}
-#box3{
-    background-color: rgb(112, 14, 112);
-    color: white;
-    border-radius: 5px;
-}
-#box4{
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-}
-.box #third
-{
-    width: 200px;
-    height: 40px;
-    border: 1px solid black;
-    padding: 10px;
-    font-size: 20px;
-    background-color: rgb(111, 209, 111);
-    color: white;
-    border-radius: 5px;
-}
-.box #third1
-{
-    width: 200px;
-    height: 40px;
-    border: 1px solid black;
-    padding: 10px;
-    font-size: 20px;
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-}
-.box #third2
-{
-    width:100%;
-    height: 40px;
-    border: 1px solid black;
-    padding: 5px 60px;
-    font-size: 20px;
-    background-color: blue;
-    color: white;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-.box{
-    display: flex;
-    flex-direction: column;
-    gap:90px;
-    padding: 10px;
-    background-color: blue;
-    
-}
-
-.textarea1{
-    width: 58%;
-    /* height: 300px; */
-    padding: 10px;
-    border: 1px solid;
-    background-color: blue;
-   
-}
-#next{
-    height: 40px;
-    width: 60px;
-    background-color: black;
-    color: white;
-    
-}
-.thirdpara{
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-    margin-top: 100px;
-    /* background-color: blue; */
-    margin-left: 250px;
-    /* justify-content: center;
+    /* flex-wrap: wrap; */
+    justify-content: space-evenly;
     align-items: center;
-    justify-items: center; */
-    /* margin-right: 300px; */
-    /* background-color: blue; */
- 
+    /* border: 1px solid; */
 }
-#emoji{
-    position: relative;
-    left:80vw ;
-    border: 1px solid #eee;
-    border-radius: 50%;
-    width: 100px;
+form{
+    display: flex;
+    flex-wrap: wrap;
+    mix-blend-mode: multiply;
 }
-#Social_Media{
-    width: 40px;
-    height: 150px;
+.navbar{
+    width: 100%;
+    min-height: 10vh;
+    display: flex ; 
+    /* flex-wrap: wrap; */
+    justify-content: space-between; 
+    align-items: center;
+    background-color: #6F6AF7;
+    color: white;
+    position: fixed;
+    z-index: 1;
+}
+.dapper{
+    font-size: 2rem;
+    padding-left: 10px;
+}
+button{
+    margin-left: -25px;
+}
+form input{
+    width: 200px;
+    height: 30px;
+    border-radius:5px;
+}
+button img{
+    width: 20px;
+    
+}
+#navicon{
+    width: 5rem;
+    cursor: pointer;
+}
+@media (width<650px){
+    ul{
+        display: none;
+    }
+    form{
+        display: none;
+    }
+}
+.code_image img{
+    width:90%;
+    height: 300px;
     margin-top: 150px;
 }
+.box{
+    width: 50%;
+    height: 300px;
+    border: 1px solid black;
+    background-color: #E5D8FF;
+    border-radius: 5px;
+    padding: 5px;
+    overflow: hidden;
+    margin-top: 150px;
+}
+.container1{
+    width: 100%;
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    /* position: absolute; */
+    /* top: 150px; */
+}
+.container2{
+  display: flex;
+  flex-wrap:wrap ;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 10px;
+  margin-top: 50px;
+  color: rgb(235, 222, 222);
+  margin-bottom: 50px;
+}
+div .box1{
+    width: 150px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+}
+.sky{
+    background-color: rgb(7, 68, 92);
+}
+.blue{
+    background-color: blue;
+}
+.violet{
+    background-color: rgb(131, 66, 131);
+}
+.black{
+    background-color: black;
+}
+.Box{
+    display: flex;
+    flex-direction: column;
+    gap: 90px;
+    text-align: center;
+    color: white;
+    
+}
+.Box .box1{
+    border: 1px solid white;
+
+}
+.box2{
+    background-color:aquamarine;
+    color: black;
+}
+.Information{
+    /* width: 100%; */
+    width: 600px;
+    height: 300px;
+    border: 1px solid black;
+    background-color: white;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    position: relative;
+
+}
+.container3{
+    border: 1px solid black;
+    width: 60%;
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    gap: 30px;
+    background-color: blue;
+    margin:auto;
+    /* margin-left: 100px; */
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+}
+.container3 button{
+    background-color: black;
+    color: white;
+    position: absolute;
+    /* left: 520px;
+    top: 250px; */
+    bottom: 10px;
+    right: 10px;
+    width: 70px;
+    height: 30px;
+}
+@media (width<372px){
+    /* .container3{
+        background-color: white;
+        border: none;
+    } */
+   
+}
+@media (width<800px){
+    .container3{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+@media (width<460px){
+    .container3{
+      background-color: white;
+      border: none;
+    }
+    .box3{
+        color: black;
+        border: 1px solid black;
+        background-color: blanchedalmond;
+        border-radius: 5px;
+    }
+    .box4{
+        color: black;
+        border: 1px solid black;
+        border-radius: 5px;
+        background-color: darkgray;
+    }
+}
+.emoji img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+}
+.social img{
+    /* height: 100px; */
+    width: 30px;
+    float: right;
+    margin-right: 20px;
+    border: 1px solid black;
+    outline: 10px solid pink;
+    
+}
+.social{
+    position:sticky;
+    top:100px ;
+   
+}
+.space{
+    height: 100vh;
+}
+
 
 
  
